<resources>
    <string name="app_name">Embargo</string>
    <string name="tv_correo">Correo</string>
    <string name="tv_contraseña">Contraseña</string>
    <string name="msg_fallo_registro">Error al registrar!</string>
    <string name="msg_fallo_login">Error al iniciar sesión!</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_juego">Menu Embargo</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="msg_conexion">Conexión Exitosa!</string>
    <string name="msg_logoff">Sesión Cerrada</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="msg_marca">Marca Vehiculo</string>
    <string name="msg_modelo">Modelo Vehiculo</string>
    <string name="msg_placa">Placa</string>
    <string name="msg_telefono">Telefono</string>
    <string name="msg_apellido1">Primer Apellido</string>
    <string name="msg_apellido2">Segundo Apellido</string>
    <string name="msg_nombre">Nombre</string>
    <string name="msg_web">Web</string>
    <string name="btn_addembargo">Agregar Vehiculo</string>
    <string name="msg_juego_added">Datos Agregados</string>
    <string name="msg_error">Faltan datos</string>

</resources>

