<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F1F1"
    android:backgroundTint="#00F1D4"
    tools:context=".ui.VideoJuego.addJuegoFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etMarca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_marca"
                android:inputType="textPersonName"
                android:textColor="#13F60B" />

            <EditText
                android:id="@+id/etModelo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_modelo"
                android:inputType="textPersonName"
                android:textColor="#13F60B" />

            <EditText
                android:id="@+id/etPlaca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_placa"
                android:inputType="textPersonName"
                android:textColor="#13F60B" />

            <EditText
                android:id="@+id/etTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_telefono"
                android:inputType="phone"
                android:textColor="#13F60B" />

            <EditText
                android:id="@+id/etApellido1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_apellido1"
                android:inputType="textPersonName"
                android:textColor="#13F60B" />

            <EditText
                android:id="@+id/etApellido2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_apellido2"
                android:inputType="textPersonName"
                android:textColor="#13F60B" />

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_nombre"
                android:inputType="textPersonName"
                android:textColor="#13F60B" />

            <EditText
                android:id="@+id/etWeb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_web"
                android:inputType="textPersonName"
                android:textColor="#13F60B" />

            <Button
                android:id="@+id/btn_agregar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#0E60DA"
                android:drawableTint="#07F68E"
                android:text="@string/btn_addembargo" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>